Fixes vertical alignment of navbar icons in Firefox.

--- a/app/components/navbar/navbar.less
+++ b/app/components/navbar/navbar.less
@@ -200,9 +200,8 @@
 // ====================================
 
 .Navbar-menuSection {
-  margin: 0;
-  padding: 0;
   list-style: none;
+  vertical-align: top;
 }
 
 
@@ -236,6 +235,7 @@
 
 .Navbar-menuItem .Navbar-icon {
   padding-left: 2px;
+  vertical-align: top;
 }
 
 // Patient section
